2010-04-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix typo in manual.
	* doc/automake.texi (Simple Tests using parallel-tests): Add
	missing closing parenthesis.

	Fix leftover call to removed function macros_dump.
	* automake.in (read_main_am_file): Call variables_dump, not
	macros_dump.  Print actual error before list of variables.

2010-04-22  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Minor improvements in comments of test `silent3.test'.
	* tests/silent3.test: Tell to keep it in sync with `silent9.test'
	too.

2010-04-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	testsuite: ensure verbose printing of captured output.
	* tests/acloca14.test, tests/acloca18.test, tests/aclocal.test,
	tests/fort2.test, tests/help.test, tests/missing3.test,
	tests/missing6.test: Print captured stdout or stderr before
	grepping it.

2010-04-20  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Make test badopt.test stricter (by enabling `set -e').
	* tests/badopt.test: Add call to `set -e'.  Due to this change,
	an unexpected failure in the call to `$ACLOCAL' (whose outcome
	was previously unchecked) would cause the whole test to fail.
	Also, bumped the copyright years.

	Make test for configure.in vs. configure.ac stricter.
	* tests/configure.test: Use a configure.in file that provokes
	an automake error, to ensure configure.ac is preferred.

	Use `set -e' in confsub.test (avoids possible false negatives).
	* tests/confsub.test: Enable shell `errexit' flag, and related
	changes (this helps avoiding some possible minor false negatives).
	Also, bumped copyright years.

2010-04-20  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix -Werror handling for presence of configure.in and configure.ac.
	* lib/Automake/Variable.pm (Automake::Variable): Do not initialize
	$configure_ac at the global level, before command-line arguments
	have been parsed.
	(require_variables): Initialize it here.
	* tests/configure.test: New test.
	* tests/Makefile.am: Update.