@@ -183,8 +183,7 @@ sub check_acinclude ()
   foreach my $key (keys %map)
     {
       # FIXME: should print line number of acinclude.m4.
-      msg ('syntax', "warning: macro `$key' defined in "
-	   . "acinclude.m4 but never used")
+      msg ('syntax', "macro `$key' defined in acinclude.m4 but never used")
 	if $map{$key} eq 'acinclude.m4' && ! exists $macro_seen{$key};
     }
 }
