@@ -1,5 +1,11 @@
 2010-04-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	Fix more duplicate message prefixes.
+	* lib/Automake/XFile.pm (seek): Do not prepend $me.
+	($me): Remove now-unused package-global.
+	* aclocal.in (check_acinclude): Remove duplicate 'warning: '
+	prefix.
+
 	Fix typo in manual.
 	* doc/automake.texi (Simple Tests using parallel-tests): Add
 	missing closing parenthesis.
